--- a/memes.html
+++ b/memes.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="xbbcode.css">
-    <link rel="stylesheet" type="text/css" href="78-ltr.css">
+    <link rel="stylesheet" type="text/css" href="http://chrishansen69.github.io/nfmm-addons/xbbcode.css">
+    <link rel="stylesheet" type="text/css" href="http://chrishansen69.github.io/nfmm-addons/78-ltr.css">
     <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
-    <script src="spoilers.js"></script> <!-- spoiler code by illiweb -->
+    <script src="http://chrishansen69.github.io/nfmm-addons/spoilers.js"></script> <!-- spoiler code by illiweb -->
     <style>
         p,
         td,
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-    <script src="xbbcode.js"></script>
+    <script src="http://chrishansen69.github.io/nfmm-addons/xbbcode.js"></script>
     <script>
 		// created by chris
 		// licensed under MIT
